# openproject-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/adr/: 0001-architecture.md  0002-cli-framework-click.md  README.md
openproject_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  duration.py  errors.py  normalize.py  output.py  resolve.py  runtime.py  secrets.py  state.py
openproject_cli/commands/: __init__.py  _args.py  _common.py  api.py  attachment.py  auth.py  comment.py  notification.py  relation.py  time.py  work_packages.py
tests/: conftest.py  test_cli.py  test_client.py  test_config.py  test_duration.py  test_normalize.py  test_output.py  test_state.py
