[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openproject-cli"
version = "0.2.0"
description = "A non-interactive command-line client for the OpenProject API"
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Vitaly Ostanin", email = "vitaly.ostanin@gmail.com"}]
keywords = ["openproject", "cli", "api", "project-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27,<1",
    "pyyaml>=6.0",
    "keyring>=24",
]

[project.urls]
Homepage = "https://github.com/VitalyOstanin/openproject-cli"
Repository = "https://github.com/VitalyOstanin/openproject-cli"
Issues = "https://github.com/VitalyOstanin/openproject-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "ruff>=0.7",
    "pyright>=1.1",
]

[project.scripts]
openproject-cli = "openproject_cli.cli:main"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config --timeout=60"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["openproject_cli"]

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pyright]
include = ["openproject_cli", "tests"]
exclude = [".venv"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = "warning"

[tool.setuptools.packages.find]
include = ["openproject_cli*"]
